<resources>
    <string name="app_name">CityApp</string>
    <string name="title">Detalles de Servicio</string>
    <string name="titleClientRegistration">Ingreso Cliente</string>
    <string name="titleVehicleRegistration">Ingreso Vehículo</string>
    <string name="titleServices">Servicios</string>
    <string name="customer_vehicle">Mario Bros</string>
    <string name="progress1">Recibido</string>
    <string name="progress2">Procesando</string>
    <string name="progress3">Terminado</string>
    <string name="progress4">Entregado</string>
    <string name="subtitle1">Recepción</string>
    <string name="customer">Cliente</string>
    <string name="Serviceby">Servicio efectuado por</string>
    <string name="signname">Nombre</string>
    <string name="customer_name">\t\t\t\tNombre completo</string>
    <string name="mechanic_name">Nombre del Mecánico</string>
    <string name="customer_id">\t\t\t\t Cédula</string>
    <string name="customer_phone">\t\t\t\Teléfono</string>
    <string name="customer_email">\t\t\t\tEmail</string>
    <string name="vehicle">Vehículo</string>
    <string name="plate">Placa del Vehículo</string>
    <string name="date">Fecha de Recepción</string>
    <string name="date2">Fecha de Procesado</string>
    <string name="date3">Fecha de Finalizado</string>
    <string name="date4">Fecha de Entrega</string>
    <string name="register">Registrar</string>
    <string name="vehicle_vin">VIN</string>
    <string name="vehicle_serie">Serie Motor</string>
    <string name="password">\t\t\t\t Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="signup">Crear cuenta</string>
    <string name="year">Año</string>
    <string name="reception_date">Fecha de Recepción del Vehículo</string>
    <string name="processing_date">Fecha de Procesamiento del Vehículo</string>
    <string name="finished_date">Fecha de Finalización del Vehículo</string>
    <string name="delivered_date">Fecha de Entrega del Vehículo</string>
    <string name="vehicle_menu">Vehículos</string>
    <string name="client_menu">Clientes</string>
    <string name="consultVehicle">Consultar Vehículo</string>
    <string name="consultVehicleByClient">Consultar Vehículo por Cliente</string>
    <string name="consultClient">Consultar Cliente</string>
    <string name="consultPending">Consultar Pendientes</string>
</resources>