<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="429dp"
            android:layout_height="724dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="306dp"
                    android:layout_height="130dp"
                    android:layout_marginLeft="85dp"
                    android:layout_marginTop="45dp"
                    app:srcCompat="@mipmap/ic_city"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="460dp"
                android:layout_height="335dp"
                android:background="@color/white"
                android:gravity="center|center_horizontal"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/editTextTextPersonName5"
                    android:layout_width="314dp"
                    android:layout_marginTop="12dp"
                    android:layout_height="59dp"
                    android:background="@drawable/corner"
                    android:elevation="10dp"
                    android:ems="10"
                    android:hint="@string/customer_id"
                    android:inputType="textPersonName"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="24sp"/>


            <EditText
                    android:id="@+id/editTextTextPersonName65"
                    android:layout_width="314dp"
                    android:layout_height="59dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner"
                    android:elevation="10dp"
                    android:ems="10"
                    android:hint="@string/customer_name"
                    android:inputType="textPersonName"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="24sp"/>
            <EditText
                    android:id="@+id/editTextTextPersonName9"
                    android:layout_width="314dp"
                    android:layout_height="59dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner"
                    android:elevation="10dp"
                    android:ems="10"
                    android:hint="@string/customer_email"
                    android:inputType="textPersonName"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="24sp"/>
            <EditText
                    android:id="@+id/editTextTextPersonName8"
                    android:layout_width="314dp"
                    android:layout_height="59dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner"
                    android:elevation="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPersonName"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="24sp"/>


        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/existingAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="45dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="Ya tengo una cuenta"
                    android:textColor="#7986CB"
                    android:textSize="20sp"
                    android:textStyle="normal"/>

            <Button
                    android:id="@+id/bntCreateAccount"
                    android:layout_width="300dp"
                    android:layout_height="71dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/buttons"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:cornerRadius="100dp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>